syntax = "proto3";

package lunarclient.websocket.emote.v1;

import "google/protobuf/timestamp.proto";
import "lunarclient/common/v1/uuid.proto";

option java_package = "com.lunarclient.websocket.emote.v1";
option java_outer_classname = "CommonProto";
option java_multiple_files = true;

message OwnedEmote {
  int32 emote_id = 1;
  google.protobuf.Timestamp granted_at = 2;
  google.protobuf.Timestamp expires_at = 3;
}

message EquippedEmote {
  int32 emote_id = 1;
  int32 slot_number = 2;
  lunarclient.common.v1.Uuid attached_styng_id = 3;
}



